[project]
name = "pisa-sample-tools"
version = "0.1.0"
description = "Offline sampler export and sharding tools for PISA runner specs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
    "simcore",
]

[project.scripts]
pisa-sample-export = "pisa_sample_tools.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv.sources]
simcore = { path = "/home/hcis-s05/ysws/PISA/runner", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
