[project]
name = "pisa-analysis-tools"
version = "0.1.0"
description = "Offline sampling and validation evidence tools for PISA experiments"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10",
    "pyyaml>=6.0.3",
    "scipy>=1.17",
    "simcore",
]

[project.scripts]
pisa-sample-export = "pisa_sample_tools.sample_export.cli:main"
pisa-sample-analyze = "pisa_sample_tools.sample_analyze.cli:main"
pisa-sample-test = "pisa_sample_tools.sampler_preview.cli:main"
pisa-sample-trajectory = "pisa_sample_tools.trajectory.cli:main"
pisa-trajectory-compare = "pisa_sample_tools.trajectory_compare.cli:main"
pisa-outcome-eval = "pisa_sample_tools.outcome_eval.cli:main"
pisa-analysis = "pisa_sample_tools.evidence.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv.sources]
simcore = { path = "/home/hcis-s05/ysws/PISA/runner", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["performance: scalability regression tests"]
